[package]
name = "glade"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.10.0"
uart_16550 = "0.2.4"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
